--- a/footvibe/template/user/index.html
+++ b/footvibe/template/user/index.html
@@ -141,7 +141,7 @@
                                     </a>
                                 </div>
                                 <div class="product-action-1">
-                                    <a aria-label="Add To Wishlist" class="action-btn hover-up" href="shop-wishlist.html"><i class="fi-rs-heart"></i></a>
+                                    <a aria-label="Add To Wishlist" class="action-btn hover-up" href="#"><i class="fi-rs-heart"></i></a>
                                 </div>
                                 <div class="product-badges product-badges-position product-badges-mrg">
                                     <span class="hot">Hot</span>
@@ -161,9 +161,7 @@
                                     <span>{{product.sale_price}}</span>
                                     <span class="old-price">{{product.max_price}}</span>
                                 </div>
-                                <div class="product-action-1 show">
-                                    <a aria-label="Add To Cart" class="action-btn hover-up" href="{% url "cart_mng:cart" %}"><i class="fi-rs-shopping-bag-add"></i></a>
-                                </div>
+                                
                             </div>
                         </div>
                     </div>
