--- a/footvibe/template/admin_temp/admin_login.html
+++ b/footvibe/template/admin_temp/admin_login.html
@@ -3,7 +3,7 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
+<!--[if gt IE 8]>      <html class="no-js"> <![endif]-->
 <html>
     <head>
         <meta charset="utf-8">
@@ -19,6 +19,7 @@
         <section class="content-main mt-80 mb-80">
             <div class="card mx-auto card-login">
                 <div class="card-body">
+                    {% include 'admin_temp/general-alerts/alerts.html' %}
                     <h4 class="card-title mb-4">Admin Log In</h4>
                     <form method='POST'>
                         {%csrf_token%}
